Issue 22118 remove JSONObject repackaging (#22246)
* #22118 cleanup

* #22118 remove casts

* #22246 more cleanup

* #22118 fixing ESSearchProxyTest

* Update LogConsoleAjaxAction.java

Co-authored-by: Nollymar Longa <nollymar.longa@dotcms.com>